fix: 打印问题默认类型

--- a/index.html
+++ b/index.html
@@ -19,287 +19,10 @@
   <body>
     <script src="./dist/ap-utils.umd.js"></script>
     <script>
-      const style = `
-.app {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.title {
-  text-align: center;
-}
-.name {
-  margin-bottom: 20px;
-}
-#table {
-  width: 100%;
-  border-collapse: collapse;
-}
-thead {
-  border-top: 3px solid black;
-  border-left: 3px solid black;
-  border-right: 3px solid black;
-}
-tbody {
-  border-bottom: 3px solid black;
-  border-left: 3px solid black;
-  border-right: 3px solid black;
-}
-.special{
-  border-top: 3px solid black;
-  border-left: 3px solid black;
-  border-right: 3px solid black;
-  border-bottom: transparent;
-}
-#table,
-th,
-td {
-  padding: 10px 10px;
-  text-align: center;
-  border: 1px solid black;
-}
-
-td{
-  font-size: 14px;
-}
-.origin{
-  display: flex;
-  align-items: center;
-}
-.origin_item{
-  flex: 1;
-  display: flex;
-  align-items: center;
-  padding-left: 20px;
-  padding-top: 20px;
-}
-.origin_item_value{
-  display: block;
-  width: 200px;
-  height: 30px;
-  border-bottom: 1px solid #000;
-}
-@page {
-  margin-top: 0cm;
-  margin-bottom: 0cm;
-}
-`;
-
-      const html = `
-<div class="app">
-<h2 class="title">常州市重点货运源头企业车辆进出场台账</h2>
-<span class="name">单位名称:</span>
-<table id="table">
-  <tbody class="special">
-    <tr>
-      <th rowspan="2">日期</th>
-      <th rowspan="2">运单号</th>
-      <th colspan="2">车号</th>
-      <th rowspan="2">驾驶员姓名</th>
-      <th rowspan="2">从业资格证</th>
-      <th rowspan="2">道路运输证</th>
-      <th rowspan="2">货物名种</th>
-      <th rowspan="2">车辆轴数</th>
-      <th rowspan="2">车辆吨位</th>
-      <th rowspan="2">目的地</th>
-      <th rowspan="2">备注</th>
-    </tr>
-    <tr>
-      <th>前</th>
-      <th>挂</th>
-    </tr>
-  </tbody>
-  <tbody>
-    <tr>
-      <td>2020/07/18</td>
-      <td>214715</td>
-      <td>苏D55724</td>
-      <td>测试ew14</td>
-      <td>张测试3</td>
-      <td>测试345685345437</td>
-      <td>测试5486232127</td>
-      <td>测试水泥混凝99</td>
-      <td>3</td>
-      <td>54</td>
-      <td>测试常州市武进横山桥镇东工业园区66</td>
-      <td>测试</td>
-    </tr>
-    <tr>
-      <td>2020/07/18</td>
-      <td>214715</td>
-      <td>苏D55724</td>
-      <td>测试ew14</td>
-      <td>张测试3</td>
-      <td>测试345685345437</td>
-      <td>测试5486232127</td>
-      <td>测试水泥混凝99</td>
-      <td>3</td>
-      <td>54</td>
-      <td>测试常州市武进横山桥镇东工业园区66</td>
-      <td>测试</td>
-    </tr>
-    <tr>
-      <td>2020/07/18</td>
-      <td>214715</td>
-      <td>苏D55724</td>
-      <td>测试ew14</td>
-      <td>张测试3</td>
-      <td>测试345685345437</td>
-      <td>测试5486232127</td>
-      <td>测试水泥混凝99</td>
-      <td>3</td>
-      <td>54</td>
-      <td>测试常州市武进横山桥镇东工业园区66</td>
-      <td>测试</td>
-    </tr>
-    <tr>
-      <td>2020/07/18</td>
-      <td>214715</td>
-      <td>苏D55724</td>
-      <td>测试ew14</td>
-      <td>张测试3</td>
-      <td>测试345685345437</td>
-      <td>测试5486232127</td>
-      <td>测试水泥混凝99</td>
-      <td>3</td>
-      <td>54</td>
-      <td>测试常州市武进横山桥镇东工业园区66</td>
-      <td>测试</td>
-    </tr>
-    <tr>
-      <td>2020/07/18</td>
-      <td>214715</td>
-      <td>苏D55724</td>
-      <td>测试ew14</td>
-      <td>张测试3</td>
-      <td>测试345685345437</td>
-      <td>测试5486232127</td>
-      <td>测试水泥混凝99</td>
-      <td>3</td>
-      <td>54</td>
-      <td>测试常州市武进横山桥镇东工业园区66</td>
-      <td>测试</td>
-    </tr>
-    <tr>
-      <td>2020/07/18</td>
-      <td>214715</td>
-      <td>苏D55724</td>
-      <td>测试ew14</td>
-      <td>张测试3</td>
-      <td>测试345685345437</td>
-      <td>测试5486232127</td>
-      <td>测试水泥混凝99</td>
-      <td>3</td>
-      <td>54</td>
-      <td>测试常州市武进横山桥镇东工业园区66</td>
-      <td>测试</td>
-    </tr>
-    <tr>
-      <td>2020/07/18</td>
-      <td>214715</td>
-      <td>苏D55724</td>
-      <td>测试ew14</td>
-      <td>张测试3</td>
-      <td>测试345685345437</td>
-      <td>测试5486232127</td>
-      <td>测试水泥混凝99</td>
-      <td>3</td>
-      <td>54</td>
-      <td>测试常州市武进横山桥镇东工业园区66</td>
-      <td>测试</td>
-    </tr>
-    <tr>
-      <td>2020/07/18</td>
-      <td>214715</td>
-      <td>苏D55724</td>
-      <td>测试ew14</td>
-      <td>张测试3</td>
-      <td>测试345685345437</td>
-      <td>测试5486232127</td>
-      <td>测试水泥混凝99</td>
-      <td>3</td>
-      <td>54</td>
-      <td>测试常州市武进横山桥镇东工业园区66</td>
-      <td>测试</td>
-    </tr>
-    <tr>
-      <td>2020/07/18</td>
-      <td>214715</td>
-      <td>苏D55724</td>
-      <td>测试ew14</td>
-      <td>张测试3</td>
-      <td>测试345685345437</td>
-      <td>测试5486232127</td>
-      <td>测试水泥混凝99</td>
-      <td>3</td>
-      <td>54</td>
-      <td>测试常州市武进横山桥镇东工业园区66</td>
-      <td>测试</td>
-    </tr>
-    <tr>
-      <td>2020/07/18</td>
-      <td>214715</td>
-      <td>苏D55724</td>
-      <td>测试ew14</td>
-      <td>张测试3</td>
-      <td>测试345685345437</td>
-      <td>测试5486232127</td>
-      <td>测试水泥混凝99</td>
-      <td>3</td>
-      <td>54</td>
-      <td>测试常州市武进横山桥镇东工业园区66</td>
-      <td>测试</td>
-    </tr>
-    <tr>
-      <td>2020/07/18</td>
-      <td>214715</td>
-      <td>苏D55724</td>
-      <td>测试ew14</td>
-      <td>张测试3</td>
-      <td>测试345685345437</td>
-      <td>测试5486232127</td>
-      <td>测试水泥混凝99</td>
-      <td>3</td>
-      <td>54</td>
-      <td>测试常州市武进横山桥镇东工业园区66</td>
-      <td>测试</td>
-    </tr>
-    <tr>
-      <td>2020/07/18</td>
-      <td>214715</td>
-      <td>苏D55724</td>
-      <td>测试ew14</td>
-      <td>张测试3</td>
-      <td>测试345685345437</td>
-      <td>测试5486232127</td>
-      <td>测试水泥混凝99</td>
-      <td>3</td>
-      <td>54</td>
-      <td>测试常州市武进横山桥镇东工业园区66</td>
-      <td>测试</td>
-    </tr>
-  </tbody>
-</table>
-<div class="origin">
-  <div class="origin_item">
-    <span class="origin_item_title">单位主管:</span>
-    <span class="origin_item_value"></span>
-  </div>
-  <div class="origin_item">
-    <span class="origin_item_title">制表人:</span>
-    <span class="origin_item_value"></span>
-  </div>
-</div>
-</div>
-`;
-
-      const options = {
-        type: "html",
-        sheetName: "111",
-        html: html,
-        style: style,
+      let opts = {
+        html: "<div>1</div>",
       };
-      apUtils.print(options);
+      apUtils.print(opts);
     </script>
   </body>
 </html>
